# tre

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_DEV_RULES.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  alembic.ini  nohup.out  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py  lifecycle.py  models.py  router.py  schemas.py  service.py
backend/app/ai/builder/: __init__.py  base.py  create_capability_gen.py  create_entity_gen.py  create_module_gen.py  create_permission_gen.py  create_repository_gen.py  create_router_gen.py  create_schema_gen.py  create_ui_page_gen.py  create_workflow_gen.py  (+1 more)
backend/app/common/: __init__.py  result.py  types.py
backend/app/core/: __init__.py  config.py  database.py  di.py  event_consumer_log.py  event_log.py  events.py  exceptions.py
backend/app/migrations/: env.py
backend/app/modules/: __init__.py
backend/app/shared/: __init__.py  audit_engine.py  audit_helper.py  base_model.py  base_repository.py  base_schema.py  base_service.py  capability_registry.py  module_registry.py  number_engine.py  ocr_service.py  orm_utils.py  outbox.py  pagination.py  tenant.py
backend/tests/test_ai/: test_models.py  test_preview.py
backend/tests/test_auth/: test_models.py  test_repository.py  test_schemas.py  test_service.py
backend/tests/test_basedata/: test_models.py
backend/tests/test_core/: test_di.py  test_events.py  test_exceptions.py
backend/tests/test_shared/: test_audit_registry.py  test_base_model.py  test_result.py  test_schema.py  test_workflow_registry.py
(+207 files in other folders)
