[project]
name = "erp-builder"
version = "0.1.0"
description = "AI 驱动的 ERP Builder —— 自动生成 ERP 模块、数据库、API、前端页面"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "alibabacloud-darabonba-stream>=0.0.2",
    "alibabacloud-ocr-api20210707>=3.1.3",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "greenlet>=3.5.3",
    "paddleocr==2.9.1",
    "paddlepaddle==3.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "setuptools>=83.0.0",
    "sqlalchemy[asyncio]>=2.0.51",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
